# dspies-aoc2017

./: .gitignore  README.md  dspies-aoc2017.cabal
day13/: Main.hs
day5/: Main.hs
python/: day3.py  day5.py  day6.py  day7.py
src/: Day1.hs  Day13.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs
src/Day3/: Fast.hs
